tests/cases/ownership/errors/aggregate-owner-undropped.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let pair = (make_owned(1), 2);
  return 0;
}
